--- a/src/assets/styles/layouts/home/_headings.scss
+++ b/src/assets/styles/layouts/home/_headings.scss
@@ -2,3 +2,11 @@ h1, h2 {
     text-align: center;
     text-transform: uppercase;
 }
+
+h1 {
+    font-weight: 900;
+}
+
+h2 {
+    font-weight: 600;
+}
