--- a/src/assets/styles/layouts/home/_headings.scss
+++ b/src/assets/styles/layouts/home/_headings.scss
@@ -1,12 +1,10 @@
 h1, h2 {
     text-align: center;
     text-transform: uppercase;
-}
-
-h1 {
     font-weight: 900;
 }
 
-h2 {
+h3, h4 {
+    text-transform: uppercase;
     font-weight: 600;
 }
