--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -30,3 +30,6 @@ $link-external: $color-contrast;
 $link-internal: $color-contrast-light;
 
 $header-height-desktop: 100px;
+
+$figures-background-color: #FFFFFF;
+$figures-border-radius: 5px;
