--- a/src/assets/styles/layouts/home/components/_footer.scss
+++ b/src/assets/styles/layouts/home/components/_footer.scss
@@ -1,9 +1,10 @@
 .uoc-footer {
-    margin-top: 1.5rem;
+    margin: 0;
     font-size: 0.75rem;
     text-align: center;
     background-color: $color-bg1;
     color: $color-text-contrast;
+    width: 100%;
 }
 
 .uoc-footer a {
