--- a/src/assets/styles/layouts/home/_generic.scss
+++ b/src/assets/styles/layouts/home/_generic.scss
@@ -13,3 +13,9 @@
     color: $color-text;
     background-color: $color-body;
   }
+
+  q {
+    font-family: $font-family-serif;
+    font-size: 18px;
+    font-style: italic;
+  }
