--- a/src/assets/styles/layouts/home/_fonts.scss
+++ b/src/assets/styles/layouts/home/_fonts.scss
@@ -1,3 +1,5 @@
+/* Downloaded with google-webfonts-helper (https://gwfh.mranftl.com/fonts) */
+
 /* montserrat-regular - latin */
 @font-face {
     font-family: 'Montserrat';
@@ -18,13 +20,13 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 600;
-    src: url('fonts/montserrat-v25-latin-600.eot'); /* IE9 Compat Modes */
+    src: url('assets/fonts/montserrat-v25-latin-600.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('fonts/montserrat-v25-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('fonts/montserrat-v25-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-         url('fonts/montserrat-v25-latin-600.woff') format('woff'), /* Modern Browsers */
-         url('fonts/montserrat-v25-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('fonts/montserrat-v25-latin-600.svg#Montserrat') format('svg'); /* Legacy iOS */
+         url('assets/fonts/montserrat-v25-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('assets/fonts/montserrat-v25-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('assets/fonts/montserrat-v25-latin-600.woff') format('woff'), /* Modern Browsers */
+         url('assets/fonts/montserrat-v25-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('assets/fonts/montserrat-v25-latin-600.svg#Montserrat') format('svg'); /* Legacy iOS */
     font-display: swap;
 }
 
@@ -33,12 +35,27 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 900;
-    src: url('fonts/montserrat-v25-latin-900.eot'); /* IE9 Compat Modes */
+    src: url('assets/fonts/montserrat-v25-latin-900.eot'); /* IE9 Compat Modes */
     src: local(''),
-         url('fonts/montserrat-v25-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('fonts/montserrat-v25-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
-         url('fonts/montserrat-v25-latin-900.woff') format('woff'), /* Modern Browsers */
-         url('fonts/montserrat-v25-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('fonts/montserrat-v25-latin-900.svg#Montserrat') format('svg'); /* Legacy iOS */
+         url('assets/fonts/montserrat-v25-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('assets/fonts/montserrat-v25-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
+         url('assets/fonts/montserrat-v25-latin-900.woff') format('woff'), /* Modern Browsers */
+         url('assets/fonts/montserrat-v25-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('assets/fonts/montserrat-v25-latin-900.svg#Montserrat') format('svg'); /* Legacy iOS */
     font-display: swap;
 }
+
+/* caveat-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Caveat';
+    font-style: normal;
+    font-weight: 400;
+    src: url('assets/fonts/caveat-v17-latin-regular.eot'); /* IE9 Compat Modes */
+    src: url('assets/fonts/caveat-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('assets/fonts/caveat-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('assets/fonts/caveat-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
+         url('assets/fonts/caveat-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('assets/fonts/caveat-v17-latin-regular.svg#Caveat') format('svg'); /* Legacy iOS */
+  }
+  
