--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -30,6 +30,9 @@ $link-external: $color-contrast;
 $link-internal: $color-contrast-light;
 
 $header-height-desktop: 100px;
+$header-height-mobile: 200px;
 
 $figures-background-color: #FFFFFF;
 $figures-border-radius: 5px;
+
+$desktop-min-width: 750px;
