--- a/src/assets/styles/layouts/home/components/_footer.scss
+++ b/src/assets/styles/layouts/home/components/_footer.scss
@@ -1,4 +1,4 @@
-.uoc-footer {
+.footer {
     margin: 0;
     font-size: 0.75rem;
     text-align: center;
@@ -7,6 +7,6 @@
     width: 100%;
 }
 
-.uoc-footer a {
+.footer a {
     color: $color-contrast-light;
 }
