--- a/src/assets/styles/layouts/home/components/_header.scss
+++ b/src/assets/styles/layouts/home/components/_header.scss
@@ -3,24 +3,56 @@
     background-color: $color-bg3;
     width: 100%;
     z-index: 9999;
+
+    display: flex;
+    flex-direction: column;
 }
 
-.header-container picture {
-    margin-left: 2em;
+@media only screen and (min-width: $desktop-min-width) {
+    .header-container {
+        flex-direction: row;
+    }
+}
+
+.header-logo {
+    margin-left: 0em;
+}
+
+.header-logo > picture > img {
+    max-width: 300px;
+}
+
+@media only screen and (min-width: $desktop-min-width) {
+    .header-logo {
+        margin-left: 2em;
+    }
+    
+    .header-logo > picture > img {
+        max-width: 350px;
+    }
 }
 
 .header-container h1 {
-    text-align: left;
-    margin: 1em 0 0 400px;
+    text-align: center;
+    line-height: 1em;
+    // margin: 1em 0 0 400px;
     color: $uoc-corporate;
+    margin: 0 0 10px 0;
 }
 
 .header-container .github {
     position: absolute;
     top: 0;
     right: 0;
-    font-size: 50px;
-    margin: 0.5em 0.5em 0 0;
+    font-size: 40px;
+    margin: 0.2em 0.2em 0 0;
+}
+
+@media only screen and (min-width: $desktop-min-width) {
+    .header-container .github {
+        font-size: 50px;
+        margin: 0.5em 0.5em 0 0;
+    }
 }
 
 .header-container .github a {
