--- a/src/assets/styles/layouts/home/components/_summary.scss
+++ b/src/assets/styles/layouts/home/components/_summary.scss
@@ -1,14 +1,21 @@
 .summary-container {
-  margin: 0 0 2em 2em;
+  margin: auto;
   max-width: 300px;
   border-radius: 2rem;
   background-color: #fff;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
-  float: right;
-  padding: 2rem;
+  padding: 1rem;
   font-size: x-small;
   line-height: normal;
+  margin-bottom: 2em;
+}
+
+@media only screen and (min-width: $desktop-min-width) {
+  .summary-container {
+      padding: 2rem;
+      margin-bottom: 0;
+  }
 }
 
 .summary-container>section>h3 {
@@ -44,4 +51,10 @@
 .summary-container dd {
   flex: 0 0 70%;
   margin-left: auto;
+}
+
+.summary-container a {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
 }
