--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,9 +1,8 @@
-<footer class="uoc-footer">
-    <div></div>
+<footer class="footer">
+    <div>Francisco Miguel Biete Ba&ntilde;&oacute;n</div>
     <div>Origen Contenido: <a href="https://en.wikipedia.org/wiki/Dublin_Castle" target="_blank"
             rel="noopener noreferrer">Wikipedia <i class="fa-solid fa-arrow-up-right-from-square"></i></a></div>
     <div>Licencia Contenido: <a href="https://en.wikipedia.org/wiki/Wikipedia:Copyrights" target="_blank"
-            rel="noopener noreferrer">Wikipedia Creative Commons Attribution-ShareAlike <i
+            rel="noopener noreferrer">Wikipedia CC Attribution-ShareAlike <i
                 class="fa-solid fa-arrow-up-right-from-square"></i></a></div>
-    <div>Francisco Miguel Biete Ba&ntilde;&oacute;n</div>
 </footer>
