--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,10 +1,14 @@
 <div class="header-container">
-    <picture class="left">
-        <source srcset="./assets/images/logo.png?as=webp&width=350" type="image/webp" />
-        <img src="./assets/images/logo.png?width=350" alt="Universitat Oberta de Catalunya" />
-    </picture>
-    <h1>M4.258 - Herramientas HTML y CSS II - PEC1</h1>
     <div class="github">
         <a href="http://github.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+    </div>
+    <div class="header-logo">
+        <picture>
+            <source srcset="./assets/images/logo.png?as=webp" type="image/webp" />
+            <img src="./assets/images/logo.png" alt="Universitat Oberta de Catalunya" />
+        </picture>
+    </div>
+    <div class="header-title">
+        <h1>M4.258 - Herramientas HTML y CSS II - PEC1</h1>
     </div>
 </div>
