--- a/src/views/header.html
+++ b/src/views/header.html
@@ -3,10 +3,12 @@
         <a href="http://github.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
     </div>
     <div class="header-logo">
-        <picture>
-            <source srcset="./assets/images/logo.png?as=webp" type="image/webp" />
-            <img src="./assets/images/logo.png" alt="Universitat Oberta de Catalunya" />
-        </picture>
+        <a href="https://uoc.edu" target="_blank" rel="noopener noreferrer">
+            <picture>
+                <source srcset="./assets/images/logo.png?as=webp" type="image/webp" />
+                <img src="./assets/images/logo.png" alt="Universitat Oberta de Catalunya" />
+            </picture>
+        </a>
     </div>
     <div class="header-title">
         <h1>M4.258 - Herramientas HTML y CSS II - PEC1</h1>
