--- a/src/assets/styles/layouts/home/components/_header.scss
+++ b/src/assets/styles/layouts/home/components/_header.scss
@@ -18,7 +18,7 @@
     margin-left: 0em;
 }
 
-.header-logo > picture > img {
+.header-logo picture > img {
     max-width: 300px;
 }
 
@@ -27,17 +27,30 @@
         margin-left: 2em;
     }
     
-    .header-logo > picture > img {
-        max-width: 350px;
+    .header-logo picture > img {
+        max-width: 300px;
     }
 }
 
 .header-container h1 {
     text-align: center;
-    line-height: 1em;
-    // margin: 1em 0 0 400px;
+    // line-height: 1em;
     color: $uoc-corporate;
     margin: 0 0 10px 0;
+}
+
+@media only screen and (min-width: $desktop-min-width) {
+    .header-title {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .header-container h1 {
+        font-size: 50px;
+        margin: 0;
+    }
 }
 
 .header-container .github {
@@ -51,7 +64,7 @@
 @media only screen and (min-width: $desktop-min-width) {
     .header-container .github {
         font-size: 50px;
-        margin: 0.5em 0.5em 0 0;
+        margin: 0.3em 0.4em 0 0;
     }
 }
 
