--- a/src/assets/styles/layouts/home/components/_summary.scss
+++ b/src/assets/styles/layouts/home/components/_summary.scss
@@ -1,29 +1,32 @@
 .summary-container {
+  max-width: 75%;
   margin: auto;
-  max-width: 300px;
-  border-radius: 2rem;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  margin-bottom: 2em;
   padding: 1rem;
   font-size: x-small;
   line-height: normal;
-  margin-bottom: 2em;
+  background-color: #fff;
+  border-radius: 2rem;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+  0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
 @media only screen and (min-width: $desktop-min-width) {
   .summary-container {
-      padding: 2rem;
+      float: right;
+      max-width: 300px;
       margin-bottom: 0;
+      margin-left: 10px;
+      padding: 2rem;
   }
 }
 
 .summary-container>section>h3 {
   width: 100%;
+  padding: 5px 0;
   text-align: center;
   background-color: $color-bg4;
   color: $color-bg1;
-  padding: 5px 0;
 }
 
 .summary-container figure {
