--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,5 +1,5 @@
 <div class="header-container">
-    <div class="github">
+    <div class="header-github">
         <a href="http://github.com" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
     </div>
     <div class="header-logo">
