--- a/src/assets/styles/layouts/home/_headings.scss
+++ b/src/assets/styles/layouts/home/_headings.scss
@@ -1,10 +1,12 @@
+h1, h2, h3, h4 {
+    text-transform: uppercase;
+}
+
 h1, h2 {
     text-align: center;
-    text-transform: uppercase;
     font-weight: 900;
 }
 
 h3, h4 {
-    text-transform: uppercase;
     font-weight: 600;
 }
