--- a/src/assets/styles/layouts/home/components/_footer.scss
+++ b/src/assets/styles/layouts/home/components/_footer.scss
@@ -5,8 +5,9 @@
     background-color: $color-bg1;
     color: $color-text-contrast;
     width: 100%;
+
+    a {
+        color: $color-contrast-light;
+    }
 }
 
-.footer a {
-    color: $color-contrast-light;
-}
