--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,36 +1,14 @@
+// Generic styles
 @import "home/generic";
 
+// Styles for some tags
 @import "home/headings";
 @import "home/links";
 @import "home/pictures";
 
-@import "home/components/header";
-@import "home/components/main";
-@import "home/components/summary";
-@import "home/components/footnotes";
-@import "home/components/footer";
-
-.uoc-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1.5rem;
-  max-width: 200px;
-  height: auto;
-
-  @media (min-width: $mqMinWidth) {
-    max-width: none;
-  }
-}
-
-.uoc-title {
-  font-family: $font-family-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: $uoc-corporate;
-
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
-  }
-}
-
+// components in the page
+@import 'home/components/header';
+@import 'home/components/main';
+@import 'home/components/summary';
+@import 'home/components/footnotes';
+@import 'home/components/footer';
