--- a/src/assets/styles/layouts/home/components/_header.scss
+++ b/src/assets/styles/layouts/home/components/_header.scss
@@ -37,20 +37,20 @@
 
 .header-title h1 {
     text-align: center;
-    // line-height: 1em;
     color: $uoc-corporate;
     margin: 0 0 10px 0;
+
+    // function
+    font-size: calc(24px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
 }
 
 @media only screen and (min-width: $desktop-min-width) {
     .header-title {
-        width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
 
         h1 {
-            font-size: 50px;
             margin: 0;
         }
     }
