--- a/src/assets/styles/layouts/home/components/_main.scss
+++ b/src/assets/styles/layouts/home/components/_main.scss
@@ -1,14 +1,9 @@
 main {
     margin: $header-height-mobile 10px 10px 10px;
 
-    section::after {
-        /* clearfix hack */
-        content: "";
-        clear: both;
-        display: table;
-    }
-
     section {
+        @include clearfix();
+
         h2 {
             text-align: center;
             margin-top: 1em;
