Reorganize files per ITCSS

--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,14 +1,20 @@
-// Generic styles
+// ITCSS - Generic - Generic styles
 @import "home/generic";
 
-// Styles for some tags
-@import "home/headings";
-@import "home/links";
-@import "home/pictures";
+// ITCSS - Elements - Styles for some tags
+@import "home/elements/cites";
+@import "home/elements/headings";
+@import "home/elements/links";
+@import "home/elements/pictures";
 
-// components in the page
+
+// ITCSS - Objects
+@import "home/objects/fonts";
+
+// ITCSS - Components in the page
 @import 'home/components/header';
 @import 'home/components/main';
 @import 'home/components/summary';
+@import 'home/components/gallery';
 @import 'home/components/footnotes';
 @import 'home/components/footer';
