--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,15 +4,15 @@
  */
 
 /**
- * Import variables
+ * Import variables - This would be ITCSS _settings_
  */
 
 @import "variables";
 
 /**
- * Import functions
+ * Import tools
  */
-@import "functions";
+@import "tools";
 
 /**
  * Import npm dependencies
