--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer">
-    <div>Francisco Miguel Biete Ba&ntilde;&oacute;n</div>
+<footer class="o-footer">
+    <div class="o-footer__author">Francisco Miguel Biete Ba&ntilde;&oacute;n</div>
     <div>Origen Contenido: <a href="https://en.wikipedia.org/wiki/Dublin_Castle" target="_blank"
             rel="noopener noreferrer">Wikipedia <i class="fa-solid fa-arrow-up-right-from-square"></i></a></div>
     <div>Licencia Contenido: <a href="https://en.wikipedia.org/wiki/Wikipedia:Copyrights" target="_blank"
