--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,5 +1,5 @@
-<div class="header-container">
-    <div class="header-logo">
+<div class="l-header-container">
+    <div class="a-header-logo">
         <a href="https://uoc.edu" target="_blank" rel="noopener noreferrer">
             <picture>
                 <source srcset="./assets/images/logo.png?as=webp" type="image/webp" />
@@ -7,10 +7,10 @@
             </picture>
         </a>
     </div>
-    <div class="header-title">
+    <div class="a-header-title">
         <h1>M4.258 - Herramientas HTML y CSS II - PEC1</h1>
     </div>
-    <div class="header-github">
+    <div class="a-header-github">
         <a href="https://github.com/fmbiete/uoc_m4.258-pec1" target="_blank" rel="noopener noreferrer"><i
                 class="fa-brands fa-github"></i></a>
     </div>
