--- a/src/assets/styles/layouts/home/components/_main.scss
+++ b/src/assets/styles/layouts/home/components/_main.scss
@@ -39,3 +39,13 @@ main {
         }
     }
 }
+
+.l-main {
+    margin-top: 1em;
+}
+
+@media only screen and (min-width: $desktop-min-width) {
+    .l-main {
+        margin-top: 3em;
+    }
+}
