--- a/src/assets/styles/layouts/home/elements/_links.scss
+++ b/src/assets/styles/layouts/home/elements/_links.scss
@@ -12,7 +12,7 @@ a[target="_blank"] {
     text-decoration: underline;
 }
 
-a.term {
+a.h-term {
     text-decoration: underline dotted;
     color: $color-bg1;
 }
