--- a/src/assets/styles/layouts/home/components/_main.scss
+++ b/src/assets/styles/layouts/home/components/_main.scss
@@ -19,10 +19,7 @@ main {
         }
 
         h3 {
-            /* clearfix hack */
-            content: "";
-            clear: both;
-            display: table;
+            @include clearfix();
         }
     }
 }
@@ -40,12 +37,12 @@ main {
     }
 }
 
-.l-main {
+.l-main--more-v-margin {
     margin-top: 1em;
 }
 
 @media only screen and (min-width: $desktop-min-width) {
-    .l-main {
+    .l-main--more-v-margin {
         margin-top: 3em;
     }
 }
