--- a/src/assets/styles/_tools.scss
+++ b/src/assets/styles/_tools.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  # Tools
+\*------------------------------------*/
+
 @mixin clearfix() {
     &::before,
     &::after {
