--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  # Page - Home
+\*------------------------------------*/
+
 // ITCSS - Generic - Generic styles
 @import "home/generic";
 
