--- a/src/assets/styles/layouts/home/objects/_fonts.scss
+++ b/src/assets/styles/layouts/home/objects/_fonts.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  # Objects - Fonts
+\*------------------------------------*/
+
 /* Downloaded with google-webfonts-helper (https://gwfh.mranftl.com/fonts) */
 
 /* montserrat-regular - latin */
