--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  # Variables
+\*------------------------------------*/
+
 @use "sass:color";
 
 $font-family-sans-serif: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
