--- a/src/assets/styles/layouts/home/components/_footer.scss
+++ b/src/assets/styles/layouts/home/components/_footer.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  # Footer
+\*------------------------------------*/
+
 .o-footer {
     margin: 0;
     font-size: 0.75rem;
