--- a/src/assets/styles/layouts/home/components/_footnotes.scss
+++ b/src/assets/styles/layouts/home/components/_footnotes.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  # Footnotes
+\*------------------------------------*/
+
 .o-footnotes {
     font-size: smaller;
     margin-left: 10px;
@@ -7,6 +11,7 @@
         padding: 0;
         counter-reset: item-li;
 
+        /* Each of the footnotes */
         li {
             position: relative;
             display: block;
@@ -16,6 +21,7 @@
             text-decoration: none;
             border-radius: .3em;
 
+            /* Custom element number */
             &:before {
                 content: counter(item-li);
                 counter-increment: item-li;
@@ -40,6 +46,10 @@
     }
 }
 
+
+/*------------------------------------*\
+  # Footnotes - Animation
+\*------------------------------------*/
 
 @keyframes spin {
     100% {
