--- a/src/assets/styles/layouts/home/components/_summary.scss
+++ b/src/assets/styles/layouts/home/components/_summary.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  # Summary
+\*------------------------------------*/
+
 .o-summary-container {
   max-width: 75%;
   margin: auto;
@@ -18,6 +22,7 @@
     color: $color-bg1;
   }
 
+  /* Images in the summary */
   figure {
     width: 100%;
     border: none;
@@ -28,6 +33,7 @@
     }
   }
 
+  /* Small section with key: value fields */
   dl {
     display: flex;
     flex-flow: row;
