--- a/src/assets/styles/layouts/home/elements/_cites.scss
+++ b/src/assets/styles/layouts/home/elements/_cites.scss
@@ -1,3 +1,8 @@
+/*------------------------------------*\
+  # Inline Cites
+\*------------------------------------*/
+
+/* Use a handwritten format */
 q {
     font-family: $font-family-serif;
     font-size: 22px;
