--- a/src/assets/styles/layouts/home/elements/_headings.scss
+++ b/src/assets/styles/layouts/home/elements/_headings.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  # Headings
+\*------------------------------------*/
+
 h1, h2, h3, h4 {
     text-transform: uppercase;
 }
