--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -31,6 +31,7 @@ $link-internal: $color-contrast-light;
 
 $header-height-desktop: 100px;
 $header-height-mobile: 200px;
+$header-logo-width: 300px;
 
 $figures-background-color: #FFFFFF;
 $figures-border-radius: 5px;
