--- a/src/views/header.html
+++ b/src/views/header.html
@@ -1,17 +1,11 @@
 <div class="l-header-container">
-    <div class="o-header__logo">
-        <a href="https://uoc.edu" target="_blank" rel="noopener noreferrer">
-            <picture>
-                <source srcset="./assets/images/logo.png?as=webp" type="image/webp" />
-                <img src="./assets/images/logo.png" alt="Universitat Oberta de Catalunya" />
-            </picture>
-        </a>
-    </div>
-    <div class="o-header__title">
-        <h1>M4.258 - Herramientas HTML y CSS II - PEC1</h1>
-    </div>
-    <div class="o-header__github">
-        <a href="https://github.com/fmbiete/uoc_m4.258-pec1" target="_blank" rel="noopener noreferrer"><i
-                class="fa-brands fa-github"></i></a>
-    </div>
+    <a class="o-header__logo" href="https://uoc.edu" target="_blank" rel="noopener noreferrer">
+        <picture>
+            <source srcset="./assets/images/logo.png?as=webp" type="image/webp" />
+            <img src="./assets/images/logo.png" alt="Universitat Oberta de Catalunya" />
+        </picture>
+    </a>
+    <h1 class="o-header__title">M4.258 - Herramientas HTML y CSS II - PEC1</h1>
+    <a class="o-header__github" href="https://github.com/fmbiete/uoc_m4.258-pec1" target="_blank"
+        rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
 </div>
