--- a/src/assets/styles/layouts/home/components/_summary.scss
+++ b/src/assets/styles/layouts/home/components/_summary.scss
@@ -61,9 +61,9 @@
 @media only screen and (min-width: $desktop-min-width) {
   .o-summary-container {
       float: right;
-      max-width: 300px;
+      max-width: 25%;
       margin-bottom: 0;
-      margin-left: 10px;
+      margin-left: 2em;
       padding: 2rem;
   }
 }
