--- a/src/assets/styles/layouts/home/components/_summary.scss
+++ b/src/assets/styles/layouts/home/components/_summary.scss
@@ -3,8 +3,8 @@
 \*------------------------------------*/
 
 .o-summary-container {
-  max-width: 75%;
-  margin: auto;
+  // max-width: 75%;
+  // margin: auto;
   margin-bottom: 2em;
   padding: 1rem;
   font-size: x-small;
@@ -61,9 +61,16 @@
 @media only screen and (min-width: $desktop-min-width) {
   .o-summary-container {
       float: right;
+      flex-grow: 1; 
+      align-self: flex-start; 
+
+      min-width: 300px;
       max-width: 25%;
+
+      margin-top: 140px;
       margin-bottom: 0;
       margin-left: 2em;
+      
       padding: 2rem;
   }
 }
