--- a/src/assets/styles/layouts/home/elements/_pictures.scss
+++ b/src/assets/styles/layouts/home/elements/_pictures.scss
@@ -50,6 +50,10 @@ figure.h-right {
     float: none;
 }
 
+.h-100w {
+    width: 100%;
+}
+
 @media only screen and (min-width: $desktop-min-width) {
     figure.h-left {
         float: left;
